--- a/style.css
+++ b/style.css
@@ -1,98 +1,197 @@
-body{
-    background: #ee0979;
-    background: -webkit-linear-gradient(to right, #ff6a00, #ee0979);
-    background: linear-gradient(to right, #ff6a00, #ee0979);
-    overflow: hidden;
+html {
+     background: #060810;
+     background-attachment: fixed;
+     color: #6cacc5;
 }
-
-.calculator{
-    position: relative;
-    width: 20rem;
-    height: 30rem;
-    background-color: white;
-    top: 3rem;
+ body {
+     color: #6cacc5;
+     font: 300 11.25px "Source Sans Pro", sans-serif;
+     margin: 0;
+     padding: 5em 0 2em;
+     text-align: center;
+     overflow: hidden;
 }
-
-.numberKeys{
-    position: relative;
-    width: 14rem;
-    height: 18rem;
-    top: 12rem;
-    left: -3rem;
+ h1 {
+     font-weight: 300;
+     margin: 0;
 }
-
-.numKey{
-    width: 4rem;
-    height: 3rem;
+/* Gradient text only on Webkit */
+ .warning {
+     color: #ed4245;
+     font-weight: 400;
+     margin: 0 auto 2em;
+     max-width: 9em;
+     font-size: 2rem;
+}
+ .calculator {
+     font-size: 28px;
+     margin: 0 auto;
+     width: 10em;
+}
+ .calculator::before, .calculator::after {
+     content: " ";
+     display: table;
+}
+ .calculator::after {
+     clear: both;
+}
+/* Calculator after dividing by zero */
+ .broken {
+     animation: broken 2s;
+     transform: translate3d(0, -2000px, 0);
+     opacity: 0;
+}
+ .viewer {
+     color: #c97874;
+     float: left;
+     line-height: 3em;
+     text-align: right;
+     text-overflow: ellipsis;
+     overflow: hidden;
+     width: 7.5em;
+     height: 3em;
+}
+ button {
+    border: 0;
+    background: rgba(42, 50, 113, .28);
+    color: #5769e9;
     cursor: pointer;
-    background-color: transparent;
-    border: none;
-    font-size: 1rem;
-    font-family: sans-serif;
-    font-weight: bolder;
-    margin-top: 1rem;
-    outline: none;
-    border-radius: 0.5rem;
-    transition: 0.2s all;
+    float: left;
+    font: inherit;
+    margin: 0.25em;
+    width: 2em;
+    height: 2em;
+    transition: all 0.5s;
 }
 
-.decimal{
-    margin-right: -4.2rem;
+ .calBtn:hover {
+    background: #5769e9;
+    box-shadow: 0 0 20px #5769e9;
+    color: white;
+}
+ button:focus {
+     outline: 0;
+    /* The value fade-ins that appear */
+}
+ button:focus::after {
+     animation: zoom 1s;
+     animation-iteration-count: 1;
+     animation-fill-mode: both;
+     content: attr(data-num);
+     cursor: default;
+     font-size: 100px;
+     position: absolute;
+     top: 1.5em;
+     left: 50%;
+     text-align: center;
+     margin-left: -24px;
+     opacity: 0;
+     width: 48px;
+}
+/* Same as above, modified for operators */
+ .ops:focus::after {
+     content: attr(data-ops);
+     margin-left: -210px;
+     width: 420px;
+}
+/* Same as above, modified for result */
+ .equals:focus::after {
+     content: attr(data-result);
+     margin-left: -300px;
+     width: 600px;
+}
+/* Reset button */
+ .reset {
+     background: rgba(201, 120, 116, .28);
+     color: #c97874;
+     font-weight: 400;
+     padding: 0.5em 1em;
+     position: absolute;
+     top: -20em;
+     left: 49%;
+     transform: translateX(-50%);
+     width: auto;
+     height: auto;
+     font-size: 1.5rem;
+    /* When button is revealed */
 }
 
-.numKey:hover{
-    background-color: rgba(240, 240, 240, 0.5);
+.reset:hover {
+    background: #c97874;
+    color: #100a1c;
 }
 
-.numKey:active{
-    background-color: rgba(240, 240, 240, 1);
+ .reset.show {
+     top: 16em;
+     animation: fadein 4s;
 }
-
-.operators{
-    position: relative;
-    top: -5rem;
-    margin-left: 13rem;
-    width: 5rem;
-    height: 15rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+/* Animations */
+/* Values that appear onclick */
+ @keyframes zoom {
+     0% {
+         transform: scale(0.2);
+         opacity: 1;
+    }
+     70% {
+         transform: scale(1);
+    }
+     100% {
+         opacity: 0;
+    }
 }
-
-.operkey{
-    background-color: transparent;
-    border: none;
-    outline: none;
-    font-size: 1.5rem;
-    color: #e26c68;
-    cursor: pointer;
-    transition: 0.2s all;
-    border-radius: 0.5rem;
+/* Division by zero animation */
+ @keyframes broken {
+     0% {
+         transform: translate3d(0, 0, 0);
+         opacity: 1;
+    }
+     5% {
+         transform: rotate(5deg);
+    }
+     15% {
+         transform: rotate(-5deg);
+    }
+     20% {
+         transform: rotate(5deg);
+    }
+     25% {
+         transform: rotate(-5deg);
+    }
+     50% {
+         transform: rotate(45deg);
+    }
+     70% {
+         transform: translate3d(0, 2000px, 0);
+         opacity: 1;
+    }
+     75% {
+         opacity: 0;
+    }
+     100% {
+         transform: translate3d(0, -2000px, 0);
+    }
 }
-
-
-.operkey:hover{
-    background-color: rgba(240, 240, 240, 0.5);
+/* Reset button fadein */
+ @keyframes fadein {
+     0% {
+         top: 20em;
+         opacity: 0;
+    }
+     50% {
+         opacity: 0;
+    }
+     100% {
+         opacity: 1;
+    }
 }
-
-.operkey:active{
-    background-color: rgba(240, 240, 240, 1);
-}
-
-.display{
-    position: relative;
-    top: -33rem;
-    width: 100%;
-    height: 11rem;
-    background-color: #fafafa;
-}
-
-.displayText{
-    width: 92%;
-    border:none;
-    outline: none;
-    background: transparent;
-    font-size: 1.2rem;
-    padding-top: 4rem;
-    cursor: default;
+ @media (min-width: 420px) {
+     .calculator {
+         width: 12em;
+    }
+     .viewer {
+         width: 8.5em;
+    }
+     button {
+         margin: 0.5em;
+    }
 }
